--- a/src/AppBar/AppBar.css
+++ b/src/AppBar/AppBar.css
@@ -23,6 +23,7 @@
     border-radius: 10px;
     font-size: 20px;
     position: relative;
+    background-color: rgb(240, 239, 239);
 }
 
 .appBarIcons {
