--- a/src/Posts/Posts.css
+++ b/src/Posts/Posts.css
@@ -119,4 +119,16 @@
 .addComments {
     padding: 8px;
     display: flex;
+    /* width: 500px; */
+}
+
+.commentTextArea {
+    width: 100%;
+    height: 50px;
+}
+
+.commentButton{
+    width: 80px;
+    height: 50px;
+    background-color: rgb(61, 61, 248);
 }
