--- a/src/Suggestions/Suggestions.css
+++ b/src/Suggestions/Suggestions.css
@@ -38,14 +38,21 @@
 }
 
 .suggestionText {
-    font-size: 25px;
-    font-weight: 600;
+    font-size: 30px;
+    font-weight: 300;
+    font-family: 'Freehand', cursive;
+    color: rgb(235, 98, 159);
 }
 
 .seeAll{
     font-size: 18px;
     font-weight: 600;
     margin-left: 10px;
+    color: grey;
+    cursor: pointer;
+    margin-top: 10px;
+    padding-left: 50px;
+    /* background-color: grey; */
 }
 
 /* .suggestionsAll>h4 {
