--- a/src/AppBar/AppBar.css
+++ b/src/AppBar/AppBar.css
@@ -1,6 +1,6 @@
 .appBar {
     display: flex;
-    padding: 0px;
+    /* padding-top: 10px; */
     /* border: 1px solid black; */
     /* background-color: antiquewhite; */
     width: 100%;
@@ -8,16 +8,26 @@
 }
 
 .webAppName {
-    margin-left: 250px;
+    margin-left: 40%;
+    margin-top: 10px;
     position: relative;
+    color: rgb(245, 18, 173);
+    width: 100%;
+    font-family: 'DynaPuff', cursive;
+    font-family: 'Pacifico', cursive;
+    font-family: 'Playfair Display', serif;
+}
+
+.webAppName > h1{
+    width: 80%;
 }
 
 .searchFiled>input {
     padding-left: 30px;
     position: relative;
-    margin-left: 300px;
+    margin-left: 10%;
     margin-top: 20px;
-    width: 300px;
+    width: 80%;
     height: 40px;
     border: 1px solid grey;
     border-radius: 10px;
@@ -29,10 +39,12 @@
 .appBarIcons {
     display: flex;
     position: relative;
-    margin-left: 50px;
+    width: 100%;
+    padding-left: 8%;
+    padding-top: 10px;
 }
 
 .appBarIcons>* {
-
-    margin: 20px;
+    width: 15%;
+    /* margin-left: 5%; */
 }
