--- a/src/Stories/Stories.css
+++ b/src/Stories/Stories.css
@@ -3,7 +3,7 @@
     background-color: azure;
     position: relative;
     width: 100%;
-    /* margin: 2px; */
+    margin-right: 5px;
     border: 1px solid grey;
     border-radius: 10px;
     display: flex;
