--- a/src/AppBar/AppBar.css
+++ b/src/AppBar/AppBar.css
@@ -13,7 +13,7 @@
     margin-top: 10px;
     position: relative;
     color: rgb(245, 18, 173);
-    width: 55%;
+    width: fit-content;
     font-family: 'DynaPuff', cursive;
     font-family: 'Pacifico', cursive;
     font-family: 'Playfair Display', serif;
