--- a/src/AppBar/AppBar.css
+++ b/src/AppBar/AppBar.css
@@ -17,6 +17,7 @@
     font-family: 'DynaPuff', cursive;
     font-family: 'Pacifico', cursive;
     font-family: 'Playfair Display', serif;
+    /* background-color: yellow; */
 }
 
 .webAppName > h1{
